[AdminBlockEditor] Fix encrypted link in btn visibility

--- a/packages/admin-block-editor/src/Resources/public/admin-block-editor.css
+++ b/packages/admin-block-editor/src/Resources/public/admin-block-editor.css
@@ -1,1 +1,1 @@
-.ce-rawtool__textarea{background-color:#f3f4f6!important;color:#111827!important;min-height:unset!important}.ce-header:after{font-size:1rem;padding-top:2rem}a[rel=encrypt]{color:#059669}
+.ce-rawtool__textarea{background-color:#f3f4f6!important;color:#111827!important;min-height:unset!important}.ce-header:after{font-size:1rem;padding-top:2rem}a[rel=encrypt]:not(.link-btn){color:#059669}
